--- a/01_array_traversing.html
+++ b/01_array_traversing.html
@@ -16,7 +16,7 @@
           ? alert(data[el])
           : alert("Please enter a valid number");
 
-        document.querySelector("#element").value = "";
+        document.querySelector('input[type="text"]').value = "";
       }
     </script>
   </head>
